overflow fix

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 
 body {
   
-    font-family: Jost;
+    font-family: Clash Display;
     font-size: 24px;
     line-height: 1.5;
     color: white;
@@ -63,6 +63,7 @@ font-size: 10vw;
 font-style: italic;
 text-align: center;
 font-family: Mazius Review;
+
 
 animation: fadein 0.4s 1s both cubic-bezier(0.9,0.03,0.69,0.22);
 
@@ -121,6 +122,7 @@ header h1 {
 }
 
 header nav {
+    overflow: hidden;
     float: right;
     margin-top: 40%;
     position:fixed;
@@ -174,6 +176,10 @@ header nav a.selected {
     margin: 10px;
     vertical-align: top;
     position: relative;
+}
+
+.photo .large {
+    overflow: hidden;
 }
 
 .photo img {
